# InfraCore-Deep-AI-Infrastructure-Engine

./: .env.example  .gitignore  ARCH_NOTES.md  ARCH_NOTES.md   COMPLETE_PROJECT_DEEP_DIVE.md  IMPLEMENTATION_TEMPLATE.md  INFERENCE_BENCHMARK.md  INFRACORE_COMPLETE_ULTRA_DEEP_DIVE.md  MULTIMODAL_MILESTONE.md  README.md  SETUP_COMPLETE.md  SPRINT2_STRATEGY.md  SPRINT_1_DAY1_COMPLETE.md  SPRINT_1_GUIDE.md  VECTORDB_ANALYSIS.md  VECTORDB_BENCHMARK.md  docker-compose.yml  pyproject.toml  requirements.txt  smoke_test_agent.py
.github/workflows/: clip-cache.yml  eval_ci.yml  ocr-smoke.yml
RELEASE_NOTES/: multimodal_release_2026-05-23.md
benchmarks/: __init__.py  chunking_bench.py  eval_bench.py
benchmarks/chunking/: bench_report.py  chunking_bench.py  large_sweep.py
benchmarks/inference/: __init__.py  bench_report.py  dataset_generator.py  ollama_bench.py  synthetic_vllm_gen.py  throughput_bench.py  vllm_bench.py
benchmarks/retrieval/: __init__.py  bench_report.py  retrieval_bench.py
benchmarks/vectordb/: __init__.py  bench_report.py  compare_report.py  dataset_generator.py  pgvector_bench.py  qdrant_bench.py
configs/: default.yaml  eval_ci.yaml  prometheus.yml
data/bench/: inference_prompts.jsonl
eval_reports/: bench_summary.md  eval_report_2026-05-19T21-43-41-925754.md  inference_summary.md  retrieval_summary.md  vectordb_comparison_summary.md
src/infracore/: config.py
tests/: conftest.py
tests/integration/: __init__.py  test_multimodal_pipeline.py  test_pipeline.py  test_qdrant_server.py
tests/smoke/: __init__.py  test_qdrant_integration.py
(+58 files in other folders)
