[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "infracore"
version = "0.1.0"
requires-python = ">=3.11"
description = "AI infrastructure engine — RAG, VectorDB, Inference, Agents, Eval"
authors = [{name = "InfraCore", email = "dev@infracore.local"}]
readme = "README.md"

dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sentence-transformers>=2.3",
    "transformers>=4.35",
    "torch>=2.0",
    "qdrant-client>=1.18",
    "pypdfium2>=4.22",
    "python-docx>=0.8.11",
    "markdown>=3.5",
    "ragas>=0.0.75",
    "datasets>=2.14",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "structlog>=23.2",
    "prometheus-client>=0.18",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.5",
    "mypy>=1.6",
    "black>=23.11",
    "ipython>=8.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
